syntax = "proto3";

option go_package = "sharedlog-stream/pkg/commtypes";

package commtypes;

message ProdId {
  uint64 task_id = 1;
  uint32 task_epoch = 2;
}
