syntax = "proto3";

option go_package = "sharedlog-stream/pkg/transaction/remote_txn_rpc";

package remote_txn_rpc;

import "pkg/commtypes/producer_state.proto";
import "pkg/txn_data/txn_meta.proto";
import "google/protobuf/empty.proto";

service RemoteTxnMngr {
  rpc Init(InitArg) returns (InitReply) {}
  rpc AppendTpPar(txn_data.TxnMetaMsg) returns (google.protobuf.Empty) {}
  rpc AbortTxn(txn_data.TxnMetaMsg) returns (google.protobuf.Empty) {}
  rpc CommitTxnAsyncComplete(txn_data.TxnMetaMsg)
      returns (google.protobuf.Empty) {}
}

message StreamInfo {
  string topicName = 1;
  uint32 numPartition = 2;
}

message InitArg {
  string TransactionalId = 1;
  uint32 SubstreamNum = 2; // which substream this task processes
  uint32 BufMaxSize = 3;
  repeated StreamInfo InputStreamInfos = 4;
  repeated StreamInfo OutputStreamInfos = 5;
  repeated StreamInfo KVChangelogInfos = 6;
  repeated StreamInfo WinChangelogInfos = 7;
}

message InitReply {
  commtypes.ProdId prodId = 1;
  repeated OffsetPair offsetPairs = 2;
}

message OffsetPair {
  string topicName = 1;
  uint64 offset = 2;
}
